--- a/sport.html
+++ b/sport.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>SPORT-TEST</h1>
+<h1>SPORT</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, sint!</p>
 </body>
 </html>
