--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-<h1>MAIN</h1>
+
+<h1>index from main branch</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, sequi.</p>
+
 </body>
 </html>
